--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
 		}
 
 		#spidergraphcontainer {
-			width: 300px;
+			display: inline-block;
+			width: 100%;
 			height: 300px;
 		}
 	</style>
@@ -44,31 +45,13 @@
 </head>
 
 <body>
-<!--<div class="navbar">-->
-<!--	<div class="navbar-inner">-->
-<!--		<a class="brand" href="#">Title</a>-->
-<!--		<ul class="nav">-->
-<!--			<li class="active"><a href="#">Home</a></li>-->
-<!--			<li><a href="#">Link</a></li>-->
-<!--			<li><a href="#">Link</a></li>-->
-<!--		</ul>-->
-<!--	</div>-->
-<!--</div>-->
 
 <div class="w-screen mt-4" style="padding-left:30px; padding-right: 30px">
-	<div class="jumbotron">
-		<div class="container">
-			<h1 class="display-4">Vibe of Boston</h1>
-			<p class="lead">Perform a vibe check on Boston using Airbnb data from 2015-2020.</p>
-			<!--			<hr class="my-4">-->
-		</div>
-	</div>
-
 	<div class="row">
 		<div class="col-9">
-			<div id="map" style="width: 100%"></div>
+			<div id="map" style="width: 95%"></div>
 		</div>
-		<div class="col-3">
+		<div class="col-3" style="text-align: center">
 			<div id="spidergraphcontainer"></div>
 		</div>
 	</div>
@@ -82,6 +65,11 @@
         'rating': 10,
         'n_accuracy': 10,
         'reviewcount': 10,
+        'popularity': 10,
+        'happiness': 10,
+        'walkability': 10,
+        'transit': 10,
+        'liveliness': 10,
     };
 
 
@@ -105,8 +93,10 @@
         });
 
         $('#spidergraphcontainer').spidergraph({
-            'fields': ['Average rating', 'Neighborhood perception accuracy', 'Number of reviews'],
-            'gridcolor': 'rgb(172,172,172)'
+            // 'fields': ['Average rating', 'Neighborhood perception accuracy', 'Average rating'],
+            'fields': ['Enjoyability', 'Consistency', 'Popularity', 'Happiness', 'Walkability', 'Transit', 'Liveliness'],
+            'gridcolor': 'rgb(172,172,172)',
+            'linear': true,
         });
 
         $('#spidergraphcontainer').spidergraph('setactivedata', {
@@ -114,11 +104,16 @@
             'fillcolor': 'rgba(46,131,230,0.6)',
             'data': [defaultWeights['rating'],
                 defaultWeights['n_accuracy'],
-                defaultWeights['reviewcount']]
+                defaultWeights['reviewcount'],
+                defaultWeights['happiness'],
+                defaultWeights['walkability'],
+                defaultWeights['transit'],
+                defaultWeights['liveliness'],
+            ],
+            'linear': true,
         });
 
         $('#spidergraphcontainer').bind('spiderdatachange', function (ev, data) {
-            console.log('Graph changed: ' + data);
             processVibeTable(vibedata, {
                 'rating': data[0],
                 'n_accuracy': data[1],
@@ -148,7 +143,10 @@
         L.tileLayer('http://{s}.tile.osm.org/{z}/{x}/{y}.png', {
             attribution: '&copy; <a href="http://osm.org/copyright">OpenStreetMap</a> contributors',
         }).addTo(map);
-        const heat = L.heatLayer(formattedData).addTo(map);
+        const heat = L.heatLayer(formattedData, {
+            max: 3.5,
+            gradient: {0.2: 'blue', 0.55: 'green', 0.8: 'yellow', 1: 'red'}
+        }).addTo(map);
     }
 
     function calcVibe(datapoint, weights) {
