added explanation of vibe factors

--- a/index.html
+++ b/index.html
@@ -60,6 +60,25 @@
 		</div>
 		<div class="col-3" style="text-align: center">
 			<div id="spidergraphcontainer"></div>
+				<p style="text-align: left">
+					Honesty: How accurate visitors found the description of an area
+				</p>
+				<hr>
+				<p style="text-align: left">
+					Happiness: Average sentiment of visitors
+				</p>
+				<hr>
+				<p style="text-align: left">
+					Liveliness: Number of visitors
+				</p>
+				<hr>
+				<p style="text-align: left">
+					Walkability: How walkable visitors found an area to be
+				</p>
+				<hr>
+				<p style="text-align: left">
+				Peacefulness: How quiet/tranquil visitors found an area to be
+				</p>
 		</div>
 	</div>
 </div>
@@ -71,6 +90,8 @@
 	<br>
 	Zoom in to take a closer look at which neighborhoods specifically suit you.
 </p>
+
+
 
 <script src="dist/leaflet-heat.js"></script>
 <script src="dist/spidergraph.js"></script>
